--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
 
         <div class="row">
 
-          <div class="col-lg-3 col-md-6"></div>
+          <div class="col-lg-3"></div>
           
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
@@ -727,7 +727,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6"></div>
+          <div class="col-lg-3"></div>
 
         </div>
 
